--- a/test1/src/scss/style.scss
+++ b/test1/src/scss/style.scss
@@ -1,7 +1,7 @@
 @import "../scss/partials/varaible";
 @import "../scss/partials/mixin";
 @import "../scss/pages/home/main";
-@import "../scss/pages/home/Wolfface/wolf.scss";
+@import "../scss/pages/home/Wolfface/wolf.css";
 
 * {
   font-family: "Poppins", sans-serif;
