--- a/test1/src/scss/pages/home/Wolfface/wolf.css
+++ b/test1/src/scss/pages/home/Wolfface/wolf.css
@@ -1,16 +1,37 @@
 .wolf {
+  position: relative;
   width: 1423px;
   height: 1024px;
   padding: 128px 0px;
-  background-color: #18305f;
+  background-color: #e5e7eb;
+}
+.wolf .container {
+  padding: 0px 80px;
 }
 .wolf .left {
   background-color: white;
   width: 512px;
   height: 623px;
   border-radius: 20px;
+  padding: 56px 40px;
+  z-index: 10;
+  margin-top: 40px;
 }
-.wolf .left h3 {
-  color: rgb(222, 51, 51);
-  font-weight: bold;
+.wolf .left h2 {
+  color: black;
+}
+.wolf .right {
+  position: absolute;
+  left: 540px;
+}
+.wolf .right .image {
+  border-width: 14px;
+  border-radius: 40px;
+  overflow: hidden;
+}
+.wolf .right .image img {
+  width: 768px;
+  height: 768px;
+  border-radius: 40px;
+  border: 10px solid white;
 } /*# sourceMappingURL=wolf.css.map */
