--- a/test1/src/scss/pages/home/Wolfface/wolf.scss
+++ b/test1/src/scss/pages/home/Wolfface/wolf.scss
@@ -1,16 +1,39 @@
 .wolf {
+  position: relative;
   width: 1423px;
   height: 1024px;
   padding: 128px 0px;
-  background-color: #18305f;
+  background-color: #e5e7eb;
+  .container {
+    padding: 0px 80px;
+  }
   .left {
     background-color: white;
     width: 512px;
     height: 623px;
     border-radius: 20px;
-    h3 {
-      color: rgb(222, 51, 51);
-      font-weight: bold;
+    padding: 56px 40px;
+    z-index: 10;
+    margin-top: 40px;
+    h2 {
+      color: black;
+    }
+  }
+  .right {
+    position: absolute;
+    // top: 0;
+    left: 540px;
+    .image {
+      border-width: 14px;
+      border-radius: 40px;
+      overflow: hidden;
+
+      img {
+        width: 768px;
+        height: 768px;
+        border-radius: 40px;
+        border: 10px solid white;
+      }
     }
   }
 }
